--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@heroui/button": "^2.2.27",
+    "@heroui/input": "^2.4.28",
     "@heroui/link": "^2.2.23",
     "@heroui/navbar": "^2.2.25",
+    "@heroui/select": "^2.4.28",
     "@heroui/system": "^2.4.23",
     "@heroui/theme": "^2.4.23",
     "@react-aria/ssr": "^3.9.10",
