--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
+    "minisearch": "^7.2.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "react": "19.2.1",
