--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@heroui/button": "^2.2.27",
+    "@heroui/drawer": "^2.2.24",
     "@heroui/input": "^2.4.28",
     "@heroui/link": "^2.2.23",
     "@heroui/navbar": "^2.2.25",
